feat: lower case and snake case

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,14 @@
     "tasks": [
         {
             "label": "Compile",
-            "type": "shell",
-            "command": "npm run compile",
+            "type": "npm",
+            "script": "watch",
             "problemMatcher": "$tsc-watch",
+            "isBackground": true,
+            "presentation": {
+                "reveal": "never",
+                "group": "watchers"
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
